* hs - added /new from Brent Beardsley
* jdk - added /1.4, /1.3, /tutorial, /all, /j2ee, /jls, /jvm options
* multi - apostrophes (') in the query now don't generate errors

Enhancements

* switches now can contain . and -. This is used here: jdk HashMap /1.3

Bug Fixes

* curr - fixed bug with decimal currency conversion (1.23 usd>cad)
* If you have an old localprefs.js that sets defaultsearch to a nonexistent search, gg is used.

-- What's new for 3.0.0.22 (beta)

New Searches

* fm - Freshmeat.net search from Brent Beardsley
* sf - Sourceforget.net search from Brent Beardsley 
* jdk - searches the Sun JDK
* guiasp - Find maps and addresses in Brazil; from Andrew Francis

Modified Searches

* acine - added /video switch and better use of nullargs
* amaz - now tags to dqsd associate account, and added switches for catalog areas and restaurants
* thw - updated the search (the form changed on the site) and added /category switch
* ups - now allows spaces in tracking number(s)
* setiq - new switches : connect and display
* conv - missing "/" in the usage section
* dicfr, gg, googletrans, telfr - better use of nullargs
* gg - added /fresh switch to find pages index over the last day, week, month

Enhancements

* Dutch holidays to 2013 (in both Dutch and English language) from Johan Geertsma 
* Modified 'shortcut' detection to allow shortcuts starting with numbers
* Andrew Francis added basic character escaping to the date/time format string.  
  Allows use of literal characters like 'd' that would normally be interpreted 
  as date/time formats.
* Modified automatic update notification to default to only final releases.  This
  can customized to notify for final or beta and final releases.

Bug Fixes

* URLs, filenames, etc. are now detected with leading whitespace
* Will Dean added a possible fix for missing tray icons at startup.  Also,
  refreshing icons can be done explicitly by typing 'refreshicons'.


-- What's new for 3.0.0.20 (beta)

New Searches
