@@ -14,6 +14,7 @@ Modified Searches
 Enhancements
 
 * switches now can contain . and -. This is used here: jdk HashMap /1.3
+* changed defer_tools.js for special searches like setiq.xml that need several forms opened in one window
 
 Bug Fixes
 
